# NDD-chat

./: .gitignore  diary.md  pyproject.toml  render.yaml
backend/: ai_generator.py  app.py  config.py  document_processor.py  rag_system.py  search_tools.py  vector_store.py
frontend/: index.html  script.js  style.css
